--- a/views/management.xml
+++ b/views/management.xml
@@ -1,13 +1,13 @@
 <odoo>
         <record model="ir.ui.view" id="management_form_view">
         <field name="name">management.form</field>
-        <field name="model">odooIracema.management</field>
+        <field name="model">iracema.management</field>
         <field name="arch" type="xml">
             <form string="management Employee Form">
                 <sheet>
                     <group colspan="4">
                         <group colspan="2" col="2">
-                            <separator string="Employees" colspan="2"/>
+                            <separator string="staff" colspan="2"/>
                             <field name="name"/>
                             <field name="dni"/>
                             <field name="social_security_number"/>
@@ -29,7 +29,7 @@
 
     <record model="ir.ui.view" id="management_tree_view">
         <field name="name">management.tree</field>
-        <field name="model">odooIracema.management</field>
+        <field name="model">iracema.management</field>
         <field name="arch" type="xml">
             <tree string="management Employee Tree">
                 <field name="name"/>
@@ -47,16 +47,16 @@
 
     <record model="ir.actions.act_window" id="management_list_action">
         <field name="name">management</field>
-        <field name="res_model">odooIracema.management</field>
+        <field name="res_model">iracema.management</field>
         <field name="view_mode">tree,form</field>
         
     </record>
 
-    <menuitem id="employees_menu" name="employees"
+    <menuitem id="staff_menu" name="staff"
                   parent="main_natural_parks_menu"/>
 
     <menuitem id="management_menu" name="management"
-        parent="employees_menu"
+        parent="staff_menu"
         action="management_list_action"/>
 
 </odoo>
