--- a/views/visitor.xml
+++ b/views/visitor.xml
@@ -1,7 +1,7 @@
 <odoo>
         <record model="ir.ui.view" id="visitor_form_view">
             <field name="name">visitor.form</field>
-            <field name="model">odooIracema.visitor</field>
+            <field name="model">iracema.visitor</field>
             <field name="arch" type="xml">
                 <form string="Visitor Form">
                     <sheet>
@@ -18,7 +18,7 @@
 
         <record model="ir.ui.view" id="visitor_tree_view">
             <field name="name">visitor.tree</field>
-            <field name="model">odooIracema.visitor</field>
+            <field name="model">iracema.visitor</field>
             <field name="arch" type="xml">
                 <tree string="Visitor Tree">
                     <field name="name"/>                    
@@ -31,7 +31,7 @@
 
         <record model="ir.actions.act_window" id="visitor_list_action">
             <field name="name">Visitor</field>
-            <field name="res_model">odooIracema.visitor</field>
+            <field name="res_model">iracema.visitor</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Crear un nuevo visitante
