--- a/views/autonomous_community.xml
+++ b/views/autonomous_community.xml
@@ -2,7 +2,7 @@
 
         <record model="ir.ui.view" id="autonomous_community_form_view">
             <field name="name">autonomous_community.form</field>
-            <field name="model">odooIracema.autonomous_community</field>
+            <field name="model">iracema.autonomous_community</field>
             <field name="arch" type="xml">
                 <form string="autonomous_community Form">
                     <sheet>
@@ -18,7 +18,7 @@
 
         <record model="ir.ui.view" id="autonomous_community_tree_view">
             <field name="name">autonomous_community.tree</field>
-            <field name="model">odooIracema.autonomous_community</field>
+            <field name="model">iracema.autonomous_community</field>
             <field name="arch" type="xml">
                 <tree string="autonomous_community Tree">
                     <field name="name"/>
@@ -30,7 +30,7 @@
 
         <record model="ir.actions.act_window" id="autonomous_community_list_action">
             <field name="name">autonomous_community</field>
-            <field name="res_model">odooIracema.autonomous_community</field>
+            <field name="res_model">iracema.autonomous_community</field>
             <field name="view_mode">tree,form</field>
             
         </record>
