--- a/views/autonomous_community_natural_park.xml
+++ b/views/autonomous_community_natural_park.xml
@@ -2,7 +2,7 @@
 
     <record model="ir.ui.view" id="autonomous_community_natural_park_form_view">
         <field name="name">autonomous_community_natural_park.form</field>
-        <field name="model">odooIracema.autonomous_community_natural_park</field>
+        <field name="model">iracema.autonomous_community_natural_park</field>
         <field name="arch" type="xml">
             <form string="autonomous community Form">
                 <sheet>
@@ -18,7 +18,7 @@
 
     <record model="ir.ui.view" id="autonomous_community_natural_park_tree_view">
         <field name="name">autonomous_community_natural_park.tree</field>
-        <field name="model">odooIracema.autonomous_community_natural_park</field>
+        <field name="model">iracema.autonomous_community_natural_park</field>
         <field name="arch" type="xml">
             <tree string="autonomous_community Tree">
                 <field name="autonomous_community_id" />
@@ -30,7 +30,7 @@
 
     <record model="ir.actions.act_window" id="autonomous_community_natural_park_list_action">
         <field name="name">autonomous_community_natural_park</field>
-        <field name="res_model">odooIracema.autonomous_community_natural_park</field>
+        <field name="res_model">iracema.autonomous_community_natural_park</field>
         <field name="view_mode">tree,form,graph</field>
     </record>
 
