--- a/views/entrances.xml
+++ b/views/entrances.xml
@@ -2,7 +2,7 @@
 
         <record model="ir.ui.view" id="entrances_form_view">
             <field name="name">entrances.form</field>
-            <field name="model">odooIracema.entrances</field>
+            <field name="model">iracema.entrances</field>
             <field name="arch" type="xml">
                 <form string="Area Form">
                     <sheet>
@@ -16,7 +16,7 @@
 
         <record model="ir.ui.view" id="entrances_tree_view">
             <field name="name">entrances.tree</field>
-            <field name="model">odooIracema.entrances</field>
+            <field name="model">iracema.entrances</field>
             <field name="arch" type="xml">
                 <tree string="Area Tree">
                     <field name="entrance_number" options='{"type": "number", "step": 1}'/>
@@ -26,13 +26,13 @@
 
         <record model="ir.actions.act_window" id="entrances_list_action">
             <field name="name">Area</field>
-            <field name="res_model">odooIracema.entrances</field>
+            <field name="res_model">iracema.entrances</field>
             <field name="view_mode">tree,form</field>
             
         </record>
         
         <menuitem id="entrances_menu" name="Area"
-            parent="employees_menu"
+            parent="staff_menu"
             action="entrances_list_action"/>
 
 </odoo>
