--- a/views/vegetable.xml
+++ b/views/vegetable.xml
@@ -1,7 +1,7 @@
 <odoo>
     <record model="ir.ui.view" id="vegetable_form_view">
         <field name="name">vegetable.form</field>
-        <field name="model">odooIracema.vegetable</field>
+        <field name="model">iracema.vegetable</field>
         <field name="arch" type="xml">
             <form string="vegetable Form">
                 <sheet>
@@ -21,7 +21,7 @@
 
     <record model="ir.ui.view" id="vegetable_tree_view">
         <field name="name">vegetable.tree</field>
-        <field name="model">odooIracema.vegetable</field>
+        <field name="model">iracema.vegetable</field>
         <field name="arch" type="xml">
             <tree string="vegetable Tree">
                 <field name="name" />
@@ -37,7 +37,7 @@
 
     <record model="ir.actions.act_window" id="vegetable_list_action">
         <field name="name">vegetable</field>
-        <field name="res_model">odooIracema.vegetable</field>
+        <field name="res_model">iracema.vegetable</field>
         <field name="view_mode">tree,form</field>
     </record>
 
